Added GUIDiagramProjectDto, refactored issue with contentPane addLast().